# SnakeNetwork

./: .gitignore  CMakeLists.txt  README.md  main.c
core/: drawing.c  drawing.h  game.c  game.h  lifecycle.c  lifecycle.h
genetics/: population.c  population.h
neural_network/: matrix.c  matrix.h  network.c  network.h
snake/: fruit.c  fruit.h  snake.c  snake.h
utils/: colours.h
